Update version to 2.6.3 and fix command sending logic